Updated formatting & info, added link to top of page

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
   <nav class="main-nav">
-    <a href="#About">About</a>
-    <a href="#Coursework">Coursework</a>
-    <a href="#Hobbies">Hobbies</a>
-    <a href="#Contact">Contact</a> 
+    <a href="#About">About✨</a>
+    <a href="#Coursework">Coursework💻</a>
+    <a href="#Hobbies">Hobbies🌟</a>
+    <a href="#Contact">Contact📫</a> 
   </nav>
 <br>
 
@@ -24,16 +24,18 @@
     <h2>Welcome to My Personal Homepage</h2>
       <img src="images/Caleb-Wesley Nana_ALIS.jpg" alt="Profile Photo" class="profile-photo" style="display: block; margin: 0 auto;">
     
-    <p>Hello! My name is Caleb Nana. I'm a Computer Science major passionate about programming, cybersecurity, and building interactive web experiences. This site showcases my coursework, hobbies, and ways to connect with me.</p>
+    <p><em>Hello! My name is Caleb Nana. I'm a Computer Science major passionate about programming, cybersecurity, and building interactive web experiences. This site showcases my coursework, hobbies, and ways to connect with me.</em></p>
   </section>
   
   <hr>
   
   <section id="About" class="outlined-section">
-    <h2>About Me</h2>
+    <h2>About Me✨</h2>
     <p>
-      <strong>I am currently a junior studying Computer Science at Georgia State University. I have experience with Python, C++, HTML/CSS, and various technologies like SQL, Tkinter, and Unreal Engine. 
-      </strong>
+      <strong><em>I am currently a junior studying Computer Science at Georgia State University. I have experience with Python, C++, HTML/CSS, and various technologies like SQL, PowerBI, and Unreal Engine. 
+      </em></strong>
+      <br>
+      <br>
       
       I enjoy trying new foods, anything active, and traveling to different parts of the world to experience cultures. My goal is to secure internships in tech gaining real-world experience and making meaningful contributions to the field as well as graduating from college with my bachelors, and continue expanding my network through various events.</p>
   </section>
@@ -41,27 +43,36 @@
   <hr>
   
   <section id="Coursework" class="outlined-section">
-    <h2>Coursework</h2>
-    <ul>
-      <li><strong>AP Computer Science:</strong> Learned object-oriented programming concepts in Java and Python</li>
-      <li><strong>Data Structures & Algorithms:</strong> Implemented arrays, linked lists, stacks, queues, hash tables, and more</li>
-      <li><strong>Development:</strong> Built interactive websites with HTML, CSS, and JavaScript</li>
-      <li><strong>Cybersecurity:</strong> Participated in Capture The Flag competitions and learned ethical hacking basics</li>
-      <li><strong>Software Development Projects:</strong> Designed JavaFX applications and Unreal Engine games</li>
+    <h2>Coursework💻</h2>
+    <ul style="text-align: center;">
+      <li><strong style="margin-bottom: 5px; display: inline-block; padding: 5px; border-style: double; border-color: black; border-width: 5px;">AP Computer Science</strong>
+        <br>
+        Learned object-oriented programming concepts in Python</li>
+      <li><strong style="margin-bottom: 5px; display: inline-block; padding: 5px; border-style:double; border-color: black; border-width: 5px;">Data Structures & Algorithms</strong>
+        <br>
+        Implemented arrays, linked lists, stacks, queues, hash tables, and more</li>
+      <li><strong style="margin-bottom: 5px; display: inline-block; padding: 5px; border-style:double; border-color: black; border-width: 5px; ">Development</strong> 
+        <br>
+        Built interactive websites with HTML, CSS, and JavaScript</li>
+      <li><strong style="margin-bottom: 5px; display: inline-block; padding: 5px; border-style:double; border-color: black; border-width: 5px;">Cybersecurity</strong>
+        <br>
+        Participated in Capture The Flag competitions and learned ethical hacking basics</li>
+      <li><strong style="margin-bottom: 5px; display: inline-block; padding: 5px; border-style:double; border-color: black; border-width: 5px;">Software Development Projects</strong>
+        <br> 
+        Designed JavaFX applications and Unreal Engine games</li>
     </ul>
   </section>
   
   <hr>
   
   <section id="Hobbies" class="outlined-section">
-    <h2>Hobbies</h2>
-    <p style="font-size: larger;"><strong>Outside of school, I enjoy:</strong></p>
+    <h2>Hobbies🌟</h2>
     <ul>
-      <li>Playing soccer and wrestling</li>
-      <li>Video game development and playtesting</li>
-      <li>Music, including marching band</li>
-      <li>Traveling and exploring new cultures</li>
-      <li>Learning new programming languages and technologies</li>
+      <li style="text-align: center;"><strong>Playing various sports</strong></li>
+      <li style="text-align: center;"><strong>game development and playtesting</strong></li>
+      <li style="text-align: center;"><strong>Music & Movement</strong></li>
+      <li style="text-align: center;"><strong>Traveling and exploring new cultures</strong></li>
+      <li style="text-align: center;"><strong>Learning new programming languages and technologies</strong></li>
     </ul>
   </section>
   
@@ -78,7 +89,8 @@ Create a dedicated area to display your course projects and assignments (can be 
 Hobbies & Interests
 List or describe your hobbies, interests, or favorite activities
 -->
-
+<a href="#top" class="back-to-top">↑ Back to Top</a>
+     <br>
 <footer id="Contact" class="main-footer" style="border-color:#00c2ff; border-width: 5px; border-style: groove;">
   <!-- Left side: copyright -->
   <div class="footer-left inline-group">
