added link to recent project in coursework section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
   <section id="Coursework" class="outlined-section">
     <h2>Coursework💻</h2>
     <ul style="text-align: center;">
+      <li><strong style="margin-bottom: 5px; display: inline-block; padding: 5px; border-style:double; border-color: black; border-width: 5px;">Joker Movie Review Webpage</strong>
+        <br> 
+        <a href="https://codd.cs.gsu.edu/~cnana1/WP/HW/2/HW2/joker.html">Check It out here</a></li>
       <li><strong style="margin-bottom: 5px; display: inline-block; padding: 5px; border-style: double; border-color: black; border-width: 5px;">AP Computer Science</strong>
         <br>
         Learned object-oriented programming concepts in Python</li>
